--- a/src/View/Item/index.html.twig
+++ b/src/View/Item/index.html.twig
@@ -1,13 +1,7 @@
 {% extends 'layout.html.twig' %}
 
 {% block content %}
-    <h1>Items</h1>
-    <ul>
-        {% for item in items %}
-            <li><a href="/item/show/{{ item.id }}">{{ item.id }}. {{ item.title }}</a></li>
-        {% else %}
-            <li>Nothing to display</li>
-        {% endfor %}
-    </ul>
-    <a href="/item/add">Ajouter</a>
+
+ {{ dump(api) }}
+
 {% endblock %}
