--- a/src/View/Item/_form.html.twig
+++ b/src/View/Item/_form.html.twig
@@ -1,5 +1,5 @@
 <form method="post">
     <input type="hidden" value="{{ item.id }}" name="id">
-    <input type="text" value="{{ item.title }}" name="title">
+    <textarea value="{{ item.title }}" name="title">{{ item.title }}</textarea>
     <input type="submit" value="Valider">
 </form>
