--- a/src/View/Item/show.html.twig
+++ b/src/View/Item/show.html.twig
@@ -1,8 +1,8 @@
 {% extends 'layout.html.twig' %}
 
 {% block content %}
-    <h1>Item {{ item.title }}</h1>
-    <p>{{ item.id }}. {{ item.title }}</p>
+    <h1>Item {{ item.title | raw}}</h1>
+    <p>{{ item.id }}. {{ item.title | raw }}</p>
     <a href="/item/edit/{{ item.id }}">Edit</a>
     <a href="/item/delete/{{item.id}}">Supprimer</a>
     <a href="/item/index">Back</a>
