--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -8,7 +8,7 @@
             <div class="row">
                 <h1 class="lead">SERVYY</h1>
                 <p class="tagline">LES SERVICES QUI VOUS CHANGENT LA VIE</p>
-                <p><a class="btn btn-default btn-lg" href="/service/index/0" role="button">LISTE DES SERVICES</a>
+                <p><a class="btn btn-default btn-lg" href="/service/index/0" role="button">DEFIER UN JOUEUR</a>
                     {% if session == false %}
                         <a class="btn btn-action btn-lg" href="/register/index" role="button">S'INSCRIRE</a>
                     {% endif %}
