--- a/src/View/Register/index.html.twig
+++ b/src/View/Register/index.html.twig
@@ -31,16 +31,8 @@
                             {% endif %}
                             <form method="post" action="">
                                 <div class="top-margin">
-                                    <label for="firstname">Prénom <span class="text-danger">*</span></label>
-                                    <input type="text" id="firstname" name="firstname" class="form-control" value="{{ post.firstname }}" required>
-                                </div>
-                                <div class="top-margin">
-                                    <label for="lastname">Nom <span class="text-danger">*</span></label>
-                                    <input type="text" id="lastname" name="lastname" class="form-control" value="{{ post.lastname }}" required>
-                                </div>
-                                <div class="top-margin">
-                                    <label for="email">Email <span class="text-danger">*</span></label>
-                                    <input type="text" id="email" name="email" class="form-control" value="{{ post.email }}" required>
+                                    <label for="login">login <span class="text-danger">*</span></label>
+                                    <input type="text" id="email" name="login" class="form-control" value="{{ post.login }}" required>
                                 </div>
                                 <div class="row top-margin">
                                     <div class="col-sm-6">
@@ -55,10 +47,6 @@
                                 <hr>
                                 <div class="row">
                                     <div class="col-lg-8">
-                                        <label class="checkbox">
-                                            <input type="checkbox" name="charte" value="check">
-                                            J'ai bien lu les <a href="/Charte/index">Termes & Conditions</a> d'utilisation.
-                                        </label>
                                     </div>
                                     <div class="col-lg-4 text-right">
                                         <button class="btn btn-action" name="submit" type="submit">Envoyer</button>
