--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -6,8 +6,8 @@
     <header id="head">
         <div class="container">
             <div class="row">
-                <h1 class="lead">SERVYY</h1>
-                <p class="tagline">LES SERVICES QUI VOUS CHANGENT LA VIE</p>
+                <h1 class="lead"><br></h1>
+                <p class="tagline"><br></p>
                 <p><a class="btn btn-default btn-lg" href="/service/index/0" role="button">DEFIER UN JOUEUR</a>
                     {% if session == false %}
                         <a class="btn btn-action btn-lg" href="/register/index" role="button">S'INSCRIRE</a>
@@ -18,31 +18,33 @@
     </header>
     <div class="container text-center"  id="users">
         <br> <br>
-        <h2 class="thin">Le meilleur endroit pour trouver de l'aide</h2>
+        <h2 class="thin">Les meilleurs combattants</h2>
         <p class="text-center">
-            100% confiance - Profils évalués
+            Best Eggers - Top 3
         </p>
         <section>
             <div class="container">
                 <div class="row text-center header animate-in" data-anim-type="fade-in-up">
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                        <h3>Nos Servyers </h3>
+                        <h3></h3>
                         <hr />
                     </div>
                 </div>
                 <div class="row animate-in" data-anim-type="fade-in-up">
+                    {% set top = 0 %}
                     {% for user in users %}
+                        {% set top = top + 1 %}
                     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
                         <div class="team-wrapper">
                             <div class="team-inner" style="background-image: url('/assets/images/users/{{ user.id }}.jpg')" >
-                                <a href="/#users"> <i class="fa fa-user" ></i></a>
+                                <a href="/#users"> <img src="/assets/images/icone/{{ top }}.png" ></a>
                             </div>
                             <div class="description">
-                                <h3> {{ user.firstname }} {{ user.lastname }}</h3>
-                                <h5> <strong> {% include 'Inc/rate.html.twig' %} <br><hr>
-                                        {{ user.label }}</strong></h5>
+                                <h3> {{ user.login }} </h3>
+                                <h5> <strong> {{ user.point }} <br><hr>
+                                        {{ user.login }}</strong></h5>
                                 <p>
-                                    {{ user.description }}
+
                                 </p>
                             </div>
                         </div>
@@ -54,7 +56,7 @@
     </div>
     <div class="jumbotron top-space">
         <div class="container">
-            <h3 class="text-center thin">VOUS CHERCHEZ / ON VOUS TROUVE</h3>
+            <h3 class="text-center thin">VOUS CHERCHEZ / VOUS DEFIEZ</h3>
             <div class="row">
                 {% for service in services %}
                 <div class="col-md-3 col-sm-6 highlight">
