--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -58,13 +58,23 @@
         <div class="container">
             <h3 class="text-center thin">VOUS CHERCHEZ / VOUS DEFIEZ</h3>
             <div class="row">
-                {% for service in services %}
-                <div class="col-md-3 col-sm-6 highlight">
-                    <div class="h-caption"><i class="fa fa-5"><img class="" src="/assets/images/icone/{{ service.id }}.png" alt="{{ service.label }}"></i>
-                        <a class="btn btn-default btn-lg" href="/service/index/{{ service.id }}">{{ service.label }}</a></div>
-                    <div class="h-body text-center">
+                {% for randomUser in randomUsers %}
+                    {% set top = top + 1 %}
+                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+                        <div class="team-wrapper">
+                            <div class="team-inner" style="background-image: url('/assets/images/users/{{ user.id }}.jpg')" >
+                                <a href="/#users"> <img src="/assets/images/icone/{{ top }}.png" ></a>
+                            </div>
+                            <div class="description">
+                                <h3> {{ randomUser.login }} </h3>
+                                <h5> <strong> {{ randomUser.point }} <br><hr>
+                                        {{ randomUser.login }}</strong></h5>
+                                <p>
+
+                                </p>
+                            </div>
+                        </div>
                     </div>
-                </div>
                 {% endfor %}
             </div>
         </div>
