--- a/src/View/Inc/nav.html.twig
+++ b/src/View/Inc/nav.html.twig
@@ -6,8 +6,6 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav pull-left">
                 <li {% if pageIndex %}class="active"{% endif %}><a href="/">Accueil</a></li>
-                <li {% if pageService %}class="active"{% endif %}><a href="/Service/index/0">Service</a></li>
-                <li {% if pageContact %}class="active"{% endif %}><a href="/Contact/index">Contact</a></li>
                 {% if session %}
                         {% if session.status == 0 %}
                             <li {% if pageMember %}class="active"{% endif %}><a href="/Member/index">Espace Membres</a></li>
@@ -24,6 +22,8 @@
                 {% else %}
                     <li><a class="btn" href="/Login/index">Se Connecter</a></li>
                 {% endif %}
+                <li><a class="btn" href="/register/index">S'inscrire</a></li>
+
             </ul>
         </div>
     </div>
