--- a/src/View/Game/fight.html.twig
+++ b/src/View/Game/fight.html.twig
@@ -3,5 +3,14 @@
 {% block title %}Battez-vous{% endblock %}
 
 {% block content %}
-    <h1>Fight</h1>
+    <div class="container">
+        <h1>Fight</h1>
+        <div class="row">
+            <div class="col-12 col-md-4"> <img src="{{ mainUser.image }}" alt="profil">  {{ mainUser.login }}</div>
+            <div class="col-12 col col-md-4">VERSUS</div>
+            <div class="col-12 col-md-4"> <img src="{{ userAdverse.image }}" alt="profil">  {{ userAdverse.login }}</div>
+            <a class="col-12 col-md-4" href="fightResult.html.twig">BOUTON COMBAT</a>
+
+        </div>
+    </div>
 {% endblock %}
