--- a/src/View/Inc/footer.html.twig
+++ b/src/View/Inc/footer.html.twig
@@ -6,7 +6,7 @@
                     <h3 class="widget-title">Contact</h3>
                     <div class="widget-body">
                         <p>+33 6 66 96 17 77<br>
-                            <a href="mailto:elneris.dang@gmail.com">servyy@gmail.com</a><br>
+                            <a href="mailto:elneris.dang@gmail.com">elisa@wildcodeschool.fr</a><br>
                             <br>
                             9 Allée Serr, 33100 Bordeaux
                         </p>
@@ -16,17 +16,17 @@
                     <h3 class="widget-title">Suivez nous</h3>
                     <div class="widget-body">
                         <p class="follow-me-icons">
-                            <a href=""><i class="fa fa-twitter fa-2"></i></a>
-                            <a href=""><i class="fa fa-instagram fa-2"></i></a>
-                            <a href=""><i class="fa fa-github fa-2"></i></a>
-                            <a href=""><i class="fa fa-facebook fa-2"></i></a>
+                            <a href="https://twitter.com/WildSchool_Bdx" target="_blank"><i class="fa fa-twitter fa-2"></i></a>
+                            <a href="https://www.instagram.com/wildcodeschool/?hl=fr" target="_blank"><i class="fa fa-instagram fa-2"></i></a>
+                            <a href="https://github.com/orgs/WildCodeSchool/dashboard" target="_blank"><i class="fa fa-github fa-2"></i></a>
+                            <a href="https://www.facebook.com/wildcodeschool/" target="_blank"><i class="fa fa-facebook fa-2"></i></a>
                         </p>
                     </div>
                 </div>
                 <div class="col-md-6 widget">
                     <h3 class="widget-title"></h3>
                     <div class="widget-body">
-                        <img src="/assets/images/bg_header.png">
+                        <img src="">
                     </div>
                 </div>
             </div>
