--- a/src/View/layout.html.twig
+++ b/src/View/layout.html.twig
@@ -5,17 +5,22 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Site de service de prestation entre particuliers">
-    <meta name="author" content="Deadly Group">
+    <meta name="author" content="">
 
     <title>{% block title %}Index{% endblock %}</title>
+    <link rel="shortcut icon" href="/assets/images/gt_favicon.png">
+    <link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/assets/css/bootstrap-theme.css" media="screen" >
+    <link rel="stylesheet" href="/assets/css/main.css">
 
+    <link href="/assets/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/assets/lib/animate/animate.min.css" rel="stylesheet">
+    <link href="/assets/lib/ionicons/css/ionicons.min.css" rel="stylesheet">
+    <link href="/assets/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="/assets/lib/lightbox/css/lightbox.min.css" rel="stylesheet">
     {% block stylesheet %}
-        <link rel="shortcut icon" href="/assets/images/gt_favicon.png">
-        <link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
-        <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-        <link rel="stylesheet" href="/assets/css/font-awesome.min.css">
-        <link rel="stylesheet" href="/assets/css/bootstrap-theme.css" media="screen" >
-        <link rel="stylesheet" href="/assets/css/main.css">
         <link rel="stylesheet" href="/assets/css/style.css">
     {% endblock %}
     <script src="https://cdn.ckeditor.com/4.11.4/standard/ckeditor.js"></script>
@@ -38,6 +43,21 @@
         <script src="/assets/js/respond.min.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+        <!-- JavaScript Libraries -->
+        <script src="/assets/lib/jquery/jquery.min.js"></script>
+        <script src="/assets/lib/jquery/jquery-migrate.min.js"></script>
+        <script src="/assets/lib/popper/popper.min.js"></script>
+        <script src="/assets/lib/bootstrap/js/bootstrap.min.js"></script>
+        <script src="/assets/lib/easing/easing.min.js"></script>
+        <script src="/assets/lib/counterup/jquery.waypoints.min.js"></script>
+        <script src="/assets/lib/counterup/jquery.counterup.js"></script>
+        <script src="/assets/lib/owlcarousel/owl.carousel.min.js"></script>
+        <script src="/assets/lib/lightbox/js/lightbox.min.js"></script>
+        <script src="/assets/lib/typed/typed.min.js"></script>
+        <!-- Contact Form JavaScript File -->
+
+        <!-- Template Main Javascript File -->
+        <script src="/assets/js/main.js"></script>
     {% endblock %}
 
     <script>CKEDITOR.config.autoParagraph = false;</script>
