--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -100,3 +100,15 @@ h5 {
   margin: 0;
 }
 
+
+/**********************************/
+/*********** Fight Result *********/
+/**********************************/
+.img-result
+{
+  position: absolute;
+  width: 60%;
+  top: 10%;
+  left:10%;
+  z-index: 20;
+}
