--- a/src/View/Profile/index.html.twig
+++ b/src/View/Profile/index.html.twig
@@ -4,6 +4,8 @@
 {% block content %}
     <div class="container">
         <h1>Profil</h1>
+
+        {% for id in user %}
         <section id="about" class="about-mf sect-pt4 route">
             <div class="container">
                 <div class="row">
@@ -14,45 +16,35 @@
                                     <div class="row">
                                         <div class="col-sm-6 col-md-5">
                                             <div class="about-img">
-                                                <img src="https://images.innoveduc.fr/easter_hackathon/6438864-dc94c42f-acac-44ff-8804-85a37f06262d.jpeg" class="img-fluid rounded b-shadow-a"
+                                                <img src="{{ id.image }}" class="img-fluid rounded b-shadow-a"
                                                      alt="">
                                             </div>
                                         </div>
                                         <div class="col-sm-6 col-md-7">
                                             <div class="about-info">
-                                                <p><span class="title-s">Login: </span> <span>elneris</span></p>
+                                                <p><span class="title-s">Login: </span> <span>{{ id.login }}</span></p>
                                                 <p><span class="title-s">Character Name: </span>
-                                                    <span>Morty Smit</span></p>
+                                                    <span>{{ id.name }}</span></p>
                                                 <p><span class="title-s">Gender: </span>
-                                                    <span>Male</span></p>
+                                                    <span>{{ id.gender }}</span></p>
                                                 <p><span class="title-s">Species: </span>
-                                                    <span>Human</span></p>
+                                                    <span>{{ id.species }}</span></p>
                                                 <p><span class="title-s">Origin: </span>
-                                                    <span>Earth</span></p>
+                                                    <span>{{ id.origin }}</span></p>
 
                                             </div>
                                         </div>
                                     </div>
                                     <div class="skill-mf">
                                         <p class="title-s">Skill</p>
-                                        <span>Skill 1</span> <span class="pull-right">8</span>
+                                        {% for skil in skill %}
+                                        <span>{{ skil.0 }}</span> <span class="pull-right">{{ skil.1 }}</span>
                                         <div class="progress">
-                                            <div class="progress-bar" role="progressbar" style="width: 85%;"
-                                                 aria-valuenow="8" aria-valuemin="0"
+                                            <div class="progress-bar" role="progressbar" style="width: {{ skil.1 }}0%;"
+                                                 aria-valuenow="{{ skil.1 }}" aria-valuemin="0"
                                                  aria-valuemax="10"></div>
                                         </div>
-                                        <span>Skill 2</span> <span class="pull-right">7</span>
-                                        <div class="progress">
-                                            <div class="progress-bar" role="progressbar" style="width: 75%"
-                                                 aria-valuenow="7" aria-valuemin="0"
-                                                 aria-valuemax="10"></div>
-                                        </div>
-                                        <span>Skill 3</span> <span class="pull-right">5</span>
-                                        <div class="progress">
-                                            <div class="progress-bar" role="progressbar" style="width: 50%"
-                                                 aria-valuenow="5" aria-valuemin="0"
-                                                 aria-valuemax="10"></div>
-                                        </div>
+                                        {% endfor %}
                                     </div>
                                 </div>
                                 <div class="col-md-6">
@@ -73,7 +65,7 @@
                                         <p><span class="title-s">Total Game : </span>
                                             <span>80</span></p>
                                         <p><span class="title-s">Total PTS : </span>
-                                            <span>197</span></p>
+                                            <span>{{ id.point }}</span></p>
                                         <p><span class="title-s">Personnage acquis : </span>
                                             <span>5</span></p>
                                         <p><span class="title-s">Colection Eggs : </span>
@@ -91,6 +83,7 @@
                 </div>
             </div>
         </section>
+
     </div>
 
     <section id="service" class="services-mf route">
@@ -220,7 +213,7 @@
                             <span class="ico-circle"><i class="ion-podium"></i></span>
                         </div>
                         <div class="counter-num">
-                            <p class="counter">197</p>
+                            <p class="counter">{{ id.point }}</p>
                             <span class="counter-text">PTS</span>
                         </div>
                     </div>
@@ -240,6 +233,6 @@
         </div>
     </div>
 
-
+{% endfor %}
 
 {% endblock %}
