--- a/src/View/Game/fight.html.twig
+++ b/src/View/Game/fight.html.twig
@@ -3,14 +3,47 @@
 {% block title %}Battez-vous{% endblock %}
 
 {% block content %}
+
+    <div class="container">
+        <h1>Fight</h1>
+        <div class="carte">
+        <div class="row">
+            <div class="titleName">{{ mainUser.login | upper }}</div>
+            <div class="col-12 col-md-4"> <img src="{{ mainUser.image }}" alt="profil"></div>
+            <div class="col-12 col col-md-4"><img src="/assets/images/versus.png"></div>
+            <div class="col-12 col-md-4"> <img src="{{ userAdverse.image }}" alt="profil">
+            <div class="titleName">{{ userAdverse.login | upper }}</div>
+            </div>
+            <a class="btn_fight" href="fightResult.html.twig">BOUTON COMBAT</a>
+        </div>
+    </div>
+    </div>
+
+    {#
     <div class="container">
         <h1>Fight</h1>
         <div class="row">
-            <div class="col-12 col-md-4"> <img src="{{ mainUser.image }}" alt="profil">  {{ mainUser.login }}</div>
-            <div class="col-12 col col-md-4">VERSUS</div>
-            <div class="col-12 col-md-4"> <img src="{{ userAdverse.image }}" alt="profil">  {{ userAdverse.login }}</div>
-            <a class="col-12 col-md-4" href="fightResult.html.twig">BOUTON COMBAT</a>
+            <div class="col-12 col-md-6">
+                <div class="card_fight">
+                    <a href="fight/{{ mainUser.login }}"><img class="card-img-top" src="{{ mainUser.image }}"></a>
+                    <div class="card-block">
+                        <h5 class="text-bold">{{ mainUser.login }}</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6">
+                <div class="card_fight">
+                    <a href="fight/{{ mainUser.login }}"><img class="card-img-top" src="{{ mainUser.image }}"></a>
+                    <div class="card-block">
+                        <h5 class="text-bold">{{ mainUser.login }}</h5>
 
+                    </div>
+                </div>
+            </div>
         </div>
+
     </div>
+    <a class="col-12 col-md-4" href="fightResult.html.twig">BOUTON COMBAT</a>
+    #}
+
 {% endblock %}
