redirection bouton fight

--- a/src/View/Game/fight.html.twig
+++ b/src/View/Game/fight.html.twig
@@ -14,7 +14,7 @@
             <div class="col-12 col-md-4"> <img src="{{ userAdverse.image }}" alt="profil">
             <div class="titleName">{{ userAdverse.login | upper }}</div>
             </div>
-            <a class="btn_fight" href="fightResult.html.twig">BOUTON COMBAT</a>
+            <a class="btn_fight" href="/Game/fightResult/{{ userAdverse.id }}">BOUTON COMBAT</a>
         </div>
     </div>
     </div>
