--- a/src/View/Game/selectAdverse.html.twig
+++ b/src/View/Game/selectAdverse.html.twig
@@ -11,7 +11,7 @@
                 <div class="card">
                     <a href="fight/{{ user.id }}"><img class="card-img-top" src="{{ user.image }}"></a>
                     <div class="card-block">
-                        <h5 class="text-bold">{{ user.login }}</h5>
+                        <h5 class="text-bold">{{ user.login | capitalize }}</h5>
                     </div>
                 </div>
             </div>
