--- a/src/View/Contact/index.html.twig
+++ b/src/View/Contact/index.html.twig
@@ -11,7 +11,7 @@
         <div class="row">
             <article class="col-sm-9 maincontent">
                 <header class="page-header">
-                    <h1 class="page-title">Contacter nous</h1>
+                    <h1 class="page-title">Contactez-nous</h1>
                 </header>
                 <p>
                 </p>
@@ -54,7 +54,7 @@
             </article>
             <aside class="col-sm-3 sidebar sidebar-right">
                 <div class="widget">
-                    <h4>Addresse</h4>
+                    <h4>Adresse</h4>
                     <address>
                         9 ALLEE SERR, 33100 BORDEAUX
                     </address>
