remise en place footer

--- a/src/View/layout.html.twig
+++ b/src/View/layout.html.twig
@@ -36,6 +36,7 @@
     {% endblock %}
     {% block content %}{% endblock %}
 
+    {% include 'Inc/footer.html.twig' %}
 
 
     {% block javascripts %}
