--- a/src/View/Inc/nav.html.twig
+++ b/src/View/Inc/nav.html.twig
@@ -6,7 +6,7 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav pull-left">
                 <li {% if pageIndex %}class="active"{% endif %}><a href="/">Accueil</a></li>
-                <li {% if pageIndex %}class="active"{% endif %}><a href="/">Classement</a></li>
+                <li {% if pageIndex %}class="active"{% endif %}><a href="/Ranking/index">Classement</a></li>
                 <li {% if pageIndex %}class="active"{% endif %}><a href="/Game/selectAdverse">Défier un joueur</a></li>
                 {% if session %}
                         {% if session.login %}
