--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -39,9 +39,9 @@
                             <div class="card"> <img src="{{ infos1.image }}">
                             </div>
                             <div class="description">
-                                <h3> {{ infos1.login }} </h3>
+                                <h3> {{ infos1.login | capitalize }} </h3>
                                 <h5> <strong> {{ infos1.point }} PTS <br><hr>
-                                        {{ infos1.login }}</strong></h5>
+                                        {{ infos1.login | capitalize }}</strong></h5>
                                 <p></p>
                             </div>
                         </div>
@@ -60,7 +60,7 @@
                             <div class="card">
                                 <a href="/game/fight/{{ infos.id }}"><img class="card-img-top" src="{{ infos.image }}"></a>
                                 <div class="card-block">
-                                    <h5 class="text-bold">{{ infos.login }}</h5>
+                                    <h5 class="text-bold">{{ infos.login | capitalize }}</h5>
                                 </div>
                             </div>
                         </div>
