--- a/src/View/Inc/footer.html.twig
+++ b/src/View/Inc/footer.html.twig
@@ -2,17 +2,17 @@
     <div class="footer1">
         <div class="container">
             <div class="row">
-                <div class="col-md-3 widget">
+                <div class="col-md-6 widget">
                     <h3 class="widget-title">Contact</h3>
                     <div class="widget-body">
                         <p>+33 6 66 96 17 77<br>
-                            <a href="mailto:elneris.dang@gmail.com">elisa@wildcodeschool.fr</a><br>
+                            <a href="mailto:elneris.dang@gmail.com">EasterFive@wildcodeschool.fr</a><br>
                             <br>
                             9 Allée Serr, 33100 Bordeaux
                         </p>
                     </div>
                 </div>
-                <div class="col-md-3 widget">
+                <div class="col-md-2 widget">
                     <h3 class="widget-title">Suivez nous</h3>
                     <div class="widget-body">
                         <p class="follow-me-icons">
