--- a/src/View/Inc/nav.html.twig
+++ b/src/View/Inc/nav.html.twig
@@ -16,7 +16,7 @@
             </ul>
             <ul class="nav navbar-nav pull-right">
                 {% if session.login %}
-                    <li><a class="btn" href="/Login/logout">Se Deconnecter</a></li>
+                    <li><a class="btn" href="/Login/logout">Se Déconnecter</a></li>
                 {% else %}
                     <li><a class="btn" href="/Login/index">Se Connecter</a></li>
                 {% endif %}
