--- a/src/View/Game/fightResult.html.twig
+++ b/src/View/Game/fightResult.html.twig
@@ -5,6 +5,9 @@
 {% block content %}
     <div class="container">
         <h1>Resultat</h1>
+        {{ dump(bonus) }}
+        <img src="{{ bonus.image }}">
+
         <div class="row">
             <div class="main-player">
                 <div class="col-12 col-md-4 img-profil">
