--- a/src/View/Game/selectAdverse.html.twig
+++ b/src/View/Game/selectAdverse.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Sélectionner un adversaire{% endblock %}
 
 {% block content %}
+    <img src="/assets/images/oeuf.png" class="oeuf">
     <h1>Sélectionner un adversaire</h1>
     <div class="container">
     <div class="row">
