--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -18,6 +18,7 @@
 
     <div class="container text-center"  id="users">
         <br> <br>
+        <img src="/assets/images/oeuf3.png" class="oeuf3">
         <h2 class="thin">Les meilleurs combattants</h2>
         <p class="text-center">
             Best Eggers - Top 3
@@ -76,7 +77,7 @@
                 <h3>BATTLEGGS</h3>
 
                 <p>
-                    Venez défier les plus grand chasseurs d'Eggs au monde à travers une expérience ludique ! Sélectionnez votre personnage parmi un choix varié et affrontez des milliers d'utilisateurs en ligne.
+                    Venez défier les plus grands chasseurs d'Eggs au monde à travers une expérience ludique ! Sélectionnez votre personnage parmi un choix varié et affrontez des milliers d'utilisateurs en ligne.
                     Arriverez-vous à récuperer la collection complète des Eggs ?
                 </p>
             </div>
@@ -84,11 +85,13 @@
                 <h3>Comment ça marche ?</h3>
                 <p>
                     1. Inscrivez-vous et cherchez un adversaire à votre taille <br>
-                    2. Défiez les autres memebre à travers des combats redoutables <br>
+                    2. Défiez les autres membres à travers des combats redoutables <br>
                     3. Collectionnez le maximum d'Eggs et montrez votre puissance !
 
                 </p>
             </div>
         </div>
     </div>
+    <img src="/assets/images/cloche.png" class="cloche">
+
 {% endblock %}
