--- a/src/View/Profile/index.html.twig
+++ b/src/View/Profile/index.html.twig
@@ -2,6 +2,8 @@
 {% block title %}Profile{% endblock %}
 {% block stylesheet %}<link rel="stylesheet" href="/assets/css/style2.css">{% endblock %}
 {% block content %}
+
+    <img src="/assets/images/oeuf1.png" class="oeuf1">
     <div class="container">
         <h1>Profil</h1>
 
