photo eggs or argent bronze

--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -37,7 +37,7 @@
                         {% set top = top + 1 %}
                     <div class="col-12 col-md-4">
                         <div class="team-wrapper">
-                            <div class="card"> <img src="{{ infos1.image }}">
+                            <div class="cardtop"> <img src="/assets/images/{{ top }}.png">
                             </div>
                             <div class="description">
                                 <h3> {{ infos1.login | capitalize }} </h3>
