--- a/src/View/Profile/index.html.twig
+++ b/src/View/Profile/index.html.twig
@@ -70,7 +70,7 @@
                                             <span>{{ id.egg }}</span></p>
 
                                         <!-- Button trigger modal -->
-                                        <a href="" class="btn btn-primary" >
+                                        <a href="/profile/egg" class="btn btn-primary" >
                                             Eggs
                                         </a>
                                     </div>
