--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -199,3 +199,12 @@ h1{
   border: 3px solid grey;
   box-shadow: 3px 5px 5px darkgrey;
 }
+
+/**********************************/
+/********** Page Egg **************/
+/**********************************/
+
+img.egg-have{
+  width: 10%;
+  margin-bottom: 30px;
+}
