--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -1,7 +1,8 @@
 {% extends 'layout.html.twig' %}
 
 {% block title %}Accueil{% endblock %}
-{% block header %} <header id="head">
+{% block header %}
+    <header id="head">
     <div class="container">
         <div class="row">
             <h1 class="lead"><br></h1>
@@ -13,7 +14,9 @@
             </p>
         </div>
     </div>
-    </header>{% endblock %}
+    </header>
+{% endblock %}
+
 {% block content %}
 
     <div class="container text-center"  id="users">
