--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -205,10 +205,10 @@ h1{
 /********** Page Egg **************/
 /**********************************/
 
-img.egg-have{
+img.egg-have {
   width: 10%;
   margin-bottom: 30px;
-
+}
 .oeuf{
   left: 100px;
   position: absolute;
