--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -24,7 +24,7 @@
         <img src="/assets/images/oeuf3.png" class="oeuf3">
         <h2 class="thin">Les meilleurs combattants</h2>
         <p class="text-center">
-            Best Eggers - Top 3
+            Top 3
         </p>
         <section>
             <div class="container">
