--- a/src/View/Register/index.html.twig
+++ b/src/View/Register/index.html.twig
@@ -31,7 +31,7 @@
                             {% endif %}
                             <form method="post" action="">
                                 <div class="top-margin">
-                                    <label for="login">login <span class="text-danger">*</span></label>
+                                    <label for="login">Pseudo <span class="text-danger">*</span></label>
                                     <input type="text" id="email" name="login" class="form-control" value="{{ post.login }}" required>
                                 </div>
                                 <div class="row top-margin">
