--- a/src/View/Login/index.html.twig
+++ b/src/View/Login/index.html.twig
@@ -26,7 +26,7 @@
                             {% endfor %}
                             <form method="post" action="">
                                 <div class="top-margin">
-                                    <label for="login">Login<span class="text-danger">*</span></label>
+                                    <label for="login">Pseudo<span class="text-danger">*</span></label>
                                     <input id="login" name="login" type="text" class="form-control" value="{{ post.login }}">
                                 </div>
                                 <div class="top-margin">
