--- a/src/View/Ranking/index.html.twig
+++ b/src/View/Ranking/index.html.twig
@@ -17,7 +17,7 @@
               <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
                     <div class="team-wrapper">
                         <div class="team-inner" style="background-image: url('/assets/images/users/{{ user.id }}.jpg')" >
-                            <a href="/#users"> <img src="/assets/images/icone/{{ top }}.png" ></a>
+                            <a href="/#users"> <img src="/assets/images/users/{{ top }}.png" ></a>
                         </div>
                         <div class="description">
                             <h3> {{ user.login | capitalize }} </h3>
