--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8,6 +8,15 @@ body {
   margin: 0;
 }
 
+.navbar-inverse .navbar-nav > li > a, .navbar-inverse .navbar-nav > .open ul > a {
+  color: whitesmoke;
+  font-size: 1.4em;
+}
+.nav>li>a {
+  position: relative;
+  display: block;
+  padding: 10px 25px;
+}
 #notfound {
   position: relative;
   height: 100vh;
