--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,11 +1,15 @@
 * {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
   padding: 0;
   margin: 0;
+}
+
+.lead{
+  padding-bottom: 0;
 }
 
 #notfound {
@@ -19,8 +23,8 @@ body {
   left: 50%;
   top: 50%;
   -webkit-transform: translate(-50%, -50%);
-      -ms-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 
 .notfound {
@@ -85,7 +89,7 @@ body {
   }
 
   .notfound .notfound-404 h1 {
-      font-size: 122px;
+    font-size: 122px;
   }
 }
 
@@ -105,6 +109,7 @@ h1{
   margin: 0;
   text-align: center;
   padding-bottom: 10px;
+  background-color:white;
 }
 
 
@@ -112,10 +117,11 @@ h1{
   width: 100%;
   height: 200px;
   border:1px solid grey;
+;
 }
 .card{
   margin-top: 25px;
-  border: 1px solid black;
+  border: 2px solid black;
   border-radius: 5px;
 }
 .card:hover {
@@ -219,6 +225,7 @@ img.egg-have {
   position: absolute;
   top: 540px;
   right: 0;
+  width:12%;
 }
 
 .cardtop img{
