--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -73,7 +73,7 @@
         </div>
     </div>
     <div class="container">
-        <h2 class="text-center top-space">A PROPOS</h2>
+        <h2 class="text-center">A PROPOS</h2>
         <br>
         <div class="row">
             <div class="col-sm-6">
