git add removed dans profile

--- a/src/View/Profile/index.html.twig
+++ b/src/View/Profile/index.html.twig
@@ -147,7 +147,7 @@
                         </div>
                         <div class="counter-num">
                             <p class="counter">{{ id.loose }}</p>
-                            <span class="counter-text">DEFAITESgit add</span>
+                            <span class="counter-text">DEFAITES</span>
                         </div>
                     </div>
                 </div>
