--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -13,6 +13,13 @@ body {
   padding-bottom: 0;
 }
 
+footer.block-footer{
+  margin-top: 40px;
+}
+
+.cloche{
+  margin-top: 20px;
+}
 
 .navbar-inverse .navbar-nav > li > a, .navbar-inverse .navbar-nav > .open ul > a {
   color: whitesmoke;
