--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -7,9 +7,9 @@
         <div class="row">
             <h1 class="lead"><br></h1>
             <p class="tagline"><br></p>
-            <p><a class="btn btn-default btn-lg" href="/game/selectAdverse" role="button">DEFIER UN JOUEUR</a>
+            <p><a class="btn btn-default btn-lg home-btn" style="border:1px solid white;color: white; " href="/game/selectAdverse" role="button">DEFIER UN JOUEUR</a>
                 {% if session == false %}
-                    <a class="btn btn-action btn-lg" href="/register/index" role="button">S'INSCRIRE</a>
+                    <a class="btn btn-action btn-lg home-btn" href="/register/index" role="button">S'INSCRIRE</a>
                 {% endif %}
             </p>
         </div>
