--- a/public/assets/css/style2.css
+++ b/public/assets/css/style2.css
@@ -34,6 +34,14 @@ a:hover {
     transition: all 0.5s ease-in-out;
 }
 
+.navbar-inverse .navbar-nav > li > a, .navbar-inverse .navbar-nav > .open ul > a {
+    color: whitesmoke;
+    font-size: 1.4em;
+}
+.navbar-inverse .navbar-nav > li > a:hover {
+    border: 1px  solid;
+    transition: 0.7s;
+}
 .p-r {
     position: relative;
 }
