--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -212,3 +212,23 @@ h1{
   right: 0;
 }
 
+/**********************************/
+/*********** Ranking *********/
+/**********************************/
+
+.text-ranking{
+  text-align: center;
+  font-weight: bold;
+}
+.ranking-list{
+  list-style: none;
+}
+.ranking{
+  font-size: 20px;
+  line-height: 14px;
+}
+.background-ranking{
+  background-image: url("/assets/images/backgroundclassement.jpg");
+  background-size: cover;
+  background-repeat:no-repeat;
+}
