--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -275,6 +275,13 @@ img.egg-have {
 
 .cardtop img{
   width: 40%;
+
+}
+
+.cardTop-rank{
+  width: 40%;
+  margin-left: 30%;
+  margin-bottom: -40px;
 }
 
 @media (max-width: 640px) {
